--- a/css/principal.css
+++ b/css/principal.css
@@ -9,6 +9,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
+	height: 100dvh;
 	font-family: 'Metropolitano', sans-serif;
 	color: black;
 	background-color: rgb(var(--semibranco));
