--- a/css/principal.css
+++ b/css/principal.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/*@import "icones-jts.css";*/
+/*@import "icones-bms.css";*/
 /* AJUSTES GERAIS */
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ html, body {
 	height: 100vh;
 	height: 100dvh;
 	font-family: 'Metropolitano', sans-serif;
-	color: black;
+	color: rgb(var(--escuro));
 	background-color: rgb(var(--semibranco));
 
 	/* Variáveis das cores*/
